[project]
name = "dbspelunker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.35.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.43",
    "sqlparse>=0.5.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]


[[tool.mypy.overrides]]
module = ["sqlparse"]
follow_untyped_imports = true
